--- a/mycar.html
+++ b/mycar.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title></title>
-		<link rel="stylesheet" href="index/css/ui.css">
 		<!-- zlys -->
 		<link rel="stylesheet" href="css/layer.css" />
+		<link rel="stylesheet" href="index/css/ui.css">
 	</head>
 	<body class="android">
 		<div class="scroll-content">
@@ -18,10 +18,10 @@
 				</div>
 				<div class="my-info" style="margin-top: -160px;">
 					<div class="my-info-background" style="background-color:#5f85cf; -webkit-filter:blur(0px)"></div>
-					<span class="my-vip" style="background:none;font-weight: bolder;">我的信息</span>
+					<span class="my-vip" style="background:none;font-weight: bolder;">车辆信息</span>
 				</div>
 				<div >
-					<div class="list" id="my">
+					<div class="list dwz-scroll" style="overflow:auto;" id="my">
 						<div class="item">
 							<div class="item-content">
 								<label class="name">车牌号:</label>
