--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 									<div class="grids-grid-icon"><img src="images/mycar.png" alt=""></div>
 									<p class="grids-grid-label">车辆信息</p>
 								</a>
-								<a class="grids-grid" href="my-featured.html">
+								<a class="grids-grid" href="javascript:;" onclick="warnToday()">
 									<div class="grids-grid-icon"><img src="images/yujing.png" alt=""></div>
 									<p class="grids-grid-label">当日预警</p>
 								</a>
-								<a class="grids-grid" href="service_appoin.html">
+								<a class="grids-grid" href="javascript:;" onclick="warnToday()">
 									<div class="grids-grid-icon"><img src="images/tongji.png" alt=""></div>
 									<p class="grids-grid-label">违规统计</p>
 								</a>
-								<a class="grids-grid" href="service-dealers.html">
+								<a class="grids-grid" href="javascript:;" onclick="sytj()">
 									<div class="grids-grid-icon"><img src="images/sytj.png" alt=""></div>
 									<p class="grids-grid-label">收运统计</p>
 								</a>
@@ -71,7 +71,7 @@
 				 class="tab-button-txt">首页</span></a>
 			<a class="tab-button" href="javascript:void(0);" onclick="tz()"><i class="tab-button-icon icon icon-tz" style="background-size:25px"></i><span
 				 class="tab-button-txt">通知</span></a>
-			<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">车辆状态</span></a>
+			<a class="tab-button " href="javascript:void(0);" onclick="dengdai()"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">等待收运</span></a>
 			<a class="tab-button " href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-sz2" style="background-size:25px"></i><span
 				 class="tab-button-txt">设置</span></a>
 		</div>
