--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 									<div class="grids-grid-icon"><img src="images/yujing.png" alt=""></div>
 									<p class="grids-grid-label">当日预警</p>
 								</a>
-								<a class="grids-grid" href="javascript:;" onclick="warnToday()">
+								<a class="grids-grid" href="javascript:;" onclick="myColl()">
 									<div class="grids-grid-icon"><img src="images/tongji.png" alt=""></div>
-									<p class="grids-grid-label">违规统计</p>
+									<p class="grids-grid-label">收运订单</p>
 								</a>
 								<a class="grids-grid" href="javascript:;" onclick="sytj()">
 									<div class="grids-grid-icon"><img src="images/sytj.png" alt=""></div>
 									<p class="grids-grid-label">收运统计</p>
 								</a>
-								<a class="grids-grid" href="javascript:;" onclick="bj()">
+								<a class="grids-grid" href="javascript:;" onclick="sb()">
 									<div class="grids-grid-icon"><img src="images/pf.png" alt=""></div>
 									<p class="grids-grid-label">我的评分</p>
 								</a>
