--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
 			</div>
 			<input type="button" class="aui-code-btn" value="登 录" style="background: #5f85cf;" onclick="login()">
 		</div>
-		<div style="margin-left: 18%;margin-top: 35%;">copyrigiht@四川智链云数科技有限公司</div>
+		<div style="margin-left: 18%;margin-top: 35%;">Copyrigiht@四川智链云数科技有限公司</div>
 		<!-- zlys -->
 		<script type="text/javascript" src="js/jquery_1.9.js"> </script>
 		<script type="text/javascript" src="js/zlys.js"></script>
