--- a/add.html
+++ b/add.html
@@ -92,6 +92,7 @@
 	<script type="text/javascript" src="js/jquery_1.9.js"> </script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=LD93KDmWIlxj1MPIxmHs6qpNLv9dSNEU"></script>
 	<script>
+		var zlysHdAll;
 		var state = 0;
 
 		function scan() {
@@ -239,14 +240,14 @@
 
 		function hd() {
 			
-			if (state == 0) {
-				layer.open({
-					content: '请先完成商户扫描',
-					skin: 'msg',
-					time: 1
-				});
-				return;
-			}
+			// if (state == 0) {
+			// 	layer.open({
+			// 		content: '请先完成商户扫描',
+			// 		skin: 'msg',
+			// 		time: 1
+			// 	});
+			// 	return;
+			// }
 			
 			layer.open({
 				type: 1,
@@ -266,11 +267,19 @@
 		text += "						<div class=\"grids-grid-icon\"><img src=\"images/lanya.png\" alt=\"\"></div>";
 		text += "						<p class=\"grids-grid-label\">蓝夜搜索</p>";
 		text += "					</a>";
-		text += "					<a class=\"grids-grid\" href=\"javascript:;\" onclick=\"hd()\">";
+		text += "					<a class=\"grids-grid\" href=\"javascript:;\" onclick=\"hdcz()\">";
 		text += "						<div class=\"grids-grid-icon\"><img src=\"images/chengzhong.png\" alt=\"\"></div>";
 		text += "						<p class=\"grids-grid-label\">电子称重</p>";
 		text += "					</a>";
 		text += "				</div>";
+		
+		
+		function hdcz(){
+			console.log(zlysHdAll)
+			$.post(initUrl + "/app/driver/hdcz",{hd:zlysHdAll},function(){
+				
+			})
+		}
 	</script>
 </html>
 
