--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 									<div class="grids-grid-icon"><img src="images/sytj.png" alt=""></div>
 									<p class="grids-grid-label">收运统计</p>
 								</a>
-								<a class="grids-grid" href="javascript:;" onclick="sb()">
+								<a class="grids-grid" href="javascript:;" onclick="pingfen()">
 									<div class="grids-grid-icon"><img src="images/pf.png" alt=""></div>
-									<p class="grids-grid-label">我的评分</p>
+									<p class="grids-grid-label">商户排行榜</p>
 								</a>
 								<a class="grids-grid" href="javascript:;" onclick="bj()">
 									<div class="grids-grid-icon"><img src="images/bj.png" alt=""></div>
